# StaticWire

./: CHANGES.md  Dockerfile  README.md  Sampe-Config.yaml  Sample-Config.yaml  docker-compose.yml  setup.cfg  staticIP
