[metadata]
name = StaticWireClient
version = 0.001
classifiers =
	Programming Language :: Python :: 3.8
	Operating System :: OS Independent

[options]
python_requires = >= 3.8
include_package_data = True
packages = find:
scripts = staticIP
install_requires =
  ruamel.yaml
  requests
  requests_toolbelt
  wireguard_tools
  qrcode_term
  bolt11 @ git+https://github.com/lnbits/bolt11.git
  helpers2 @git+https://github.com/AndySchroder/helpers2.git
