[metadata]
name = StaticWireClient
version = 0.001
classifiers =
	Programming Language :: Python :: 3.8
	Operating System :: OS Independent

[options]
python_requires = >= 3.8
include_package_data = True
packages = find:
scripts = staticIP
install_requires =
  ruamel.yaml
  requests
  requests_toolbelt
  wireguard_tools
  qrcode_term
  pystemd
  helpers2 @git+https://github.com/AndySchroder/helpers2.git
  lnd-grpc-client @git+https://github.com/AndySchroder/lnd-grpc-client.git

  # recently the latest version of bolt11 does not work, so anchor to a known good commit
  bolt11 @ git+https://github.com/lnbits/bolt11.git@540b4062dda01ff2338ef6cd3ab28957dba71880
